# Totem

./: .gitignore  examplefile.txt  readme.md
CV_code/optical_flow_with_osc/: optical_flow_with_osc.pde
Code/Max/: OSC_TO_OF_messages.maxpat  central_control.maxpat
Code/Max/TOTEM_barbican/: TOTEM_barbican.maxproj
Code/Max/stateMachine/: StateEngine.maxpat  state.maxpat
Code/Processing/TotemGlyphs/: Glyph.pde
Code/Processing/TotemGlyphs2/: Glyph.pde  TotemGlyphs2.pde  weightedRandom.pde
Code/Processing/TotemGlyphs3/: TotemGlyphs3.pde
Code/Processing/TotemGlyphs4/: Glyph.pde  GlyphBlockFactory.pde  TotemGlyphs4.pde
Code/Processing/syphon_to_serial/: syphon_to_serial.pde
Code/TouchDesigner/: 19_02_14_prototype2.1.toe  19_02_14_prototype2.10.toe  19_02_14_prototype2.2.toe  19_02_14_prototype2.3.toe  19_02_14_prototype2.4.toe  19_02_14_prototype2.5.toe  19_02_14_prototype2.6.toe  19_02_14_prototype2.7.toe  19_02_14_prototype2.8.toe  19_02_14_prototype2.9.toe  19_02_14_syphon_to_serial_MAC.toe  19_02_14_syphon_to_serial_WINDOWS.toe
Code/arduino/arduino_serialStreaming/: arduino_serialStreaming.ino
Code/arduino/arduino_testCode/: arduino_testCode.ino
Code/arduino/arduino_testCode_line/: arduino_testCode_line.ino
Code/openFrameworks/TOTEM_Barbican/: Makefile  Project.xcconfig  TOTEM_Barbican.qbs  config.make
Code/openFrameworks/big_glyphs/: Glyph.h  GlyphBlock.cpp  GlyphBlock.h  GlyphBlockFactory.cpp  GlyphBlockFactory.h  LedMatrix.cpp  LedMatrix.h  defs.h
Code/openFrameworks/of_to_lights/: GlyphBlock.cpp  GlyphBlock.h  Matrix3x3.h  defs.h
Code/openFrameworks/vision/: Makefile  Project.xcconfig  addons.make  config.make
Code_00/Processing/TotemGlyphs/: TotemGlyphs.pde
Code_00/Processing/sending/: pixel.pde
ComputerVision/background_subtraction_with_osc/: background_subtraction_with_osc.pde
Hardware/: readme.md
emulation/lightboard/: pixel.pde
owen change/: Untitled.rtf
polytope/booster/: PolytopesBoosterAgent.h
polytope/chasers/: PolytopesChaserGridWorld.h
polytope/drunk/: PolytopesOSCDrunkEnvironment.cpp
polytope/firefly/: PolytopesOSCFireflyEnvironment.cpp
polytope/osc/: CMakeLists.txt  PolytopesOSC.h
sending/: sending.pde
stuff/: README.md
stuff/CA_TAKASHI/: ofApp.cpp  ofApp.h
stuff/polytope/: README.md
stuff/polytope/booster/: CMakeLists.txt  PolytopesBoosterAgent.cpp  PolytopesOSCBoosterEnvironment.cpp  PolytopesOSCBoosterEnvironment.h  main.cpp
stuff/polytope/chasers/: CMakeLists.txt  PolytopesChaserGridWorld.cpp  PolytopesOSCChaserEnvironment.cpp  PolytopesOSCChaserEnvironment.h  main.cpp
stuff/polytope/drunk/: CMakeLists.txt  PolytopesDrunkAgent.cpp  PolytopesDrunkAgent.h  PolytopesOSCDrunkEnvironment.h  main.cpp
stuff/polytope/firefly/: CMakeLists.txt  PolytopesFireflyAgent.cpp  PolytopesFireflyAgent.h  PolytopesOSCFireflyEnvironment.h  main.cpp
stuff/polytope/firefly/qualia/src/qualia/plugins/mapper/: MapperBasicEnvironment.h
stuff/polytope/genes/: CMakeLists.txt  GeneticWorld.cpp  GeneticWorld.h  main.cpp
(+96 files in other folders)
